--- a/homepage.html
+++ b/homepage.html
@@ -46,6 +46,7 @@
             <div class="feature-box">
                 <h3>Trusted Agents</h3>
                 <p>Professional agents to guide you at every step.</p>
+                <img src="images/home.jpg">
             </div>
         </div>
     </section>
