--- a/index.html
+++ b/index.html
@@ -1,52 +1,73 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Dream Homes - Real Estate</title>
+    <meta charset="UTF-8">
+    <title>UrbanNest Real Estate</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <header>
-        <h1>Dream Homes</h1>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">Properties</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
-        </nav>
-    </header>
+<header>
+    <h1>UrbanNest</h1>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#properties">Properties</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+    </nav>
+</header>
 
-    <section class="hero">
-        <h2>Find Your Dream Property</h2>
-        <input type="text" placeholder="Search by city...">
-        <button>Search</button>
-    </section>
+<section class="hero">
+    <h2>Find Your Dream Home</h2>
+    <p>Luxury | Affordable | Trusted</p>
+    <input type="text" id="search" placeholder="Search by city...">
+</section>
 
-    <section class="properties">
-        <h2>Featured Properties</h2>
+<section id="properties" class="properties">
+    <h2>Available Properties</h2>
 
-        <div class="card">
-            <img src="https://via.placeholder.com/250" alt="House">
-            <h3>Luxury Villa</h3>
-            <p>Location: New York</p>
-            <p>Price: $500,000</p>
-            <button>View Details</button>
-        </div>
+    <div class="property" data-city="New York">
+        <img src="https://images.unsplash.com/photo-1568605114967-8130f3a36994" alt="">
+        <h3>Luxury Villa</h3>
+        <p>City: New York</p>
+        <p>Price: $500,000</p>
+    </div>
 
-        <div class="card">
-            <img src="https://via.placeholder.com/250" alt="House">
-            <h3>Modern Apartment</h3>
-            <p>Location: Los Angeles</p>
-            <p>Price: $300,000</p>
-            <button>View Details</button>
-        </div>
+    <div class="property" data-city="Los Angeles">
+        <img src="https://images.unsplash.com/photo-1572120360610-d971b9d7767c" alt="">
+        <h3>Modern Apartment</h3>
+        <p>City: Los Angeles</p>
+        <p>Price: $300,000</p>
+    </div>
 
-    </section>
+    <div class="property" data-city="Chicago">
+        <img src="https://images.unsplash.com/photo-1507089947368-19c1da9775ae" alt="">
+        <h3>Family House</h3>
+        <p>City: Chicago</p>
+        <p>Price: $250,000</p>
+    </div>
 
-    <footer>
-        <p>© 2026 Dream Homes | All Rights Reserved</p>
-    </footer>
+</section>
 
+<section id="about" class="about">
+    <h2>About Us</h2>
+    <p>UrbanNest is a trusted real estate company helping clients find their perfect home with transparency and reliability.</p>
+</section>
+
+<section id="contact" class="contact">
+    <h2>Contact Us</h2>
+    <form>
+        <input type="text" placeholder="Your Name" required>
+        <input type="email" placeholder="Your Email" required>
+        <textarea placeholder="Your Message"></textarea>
+        <button type="submit">Send Message</button>
+    </form>
+</section>
+
+<footer>
+    <p>© 2026 UrbanNest Real Estate | All Rights Reserved</p>
+</footer>
+
+<script src="script.js"></script>
 </body>
 </html>
-
